[package]
name = "derby-game-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = [ "derive" ] }
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] } 
serde_json = "1.0"
uuid = { version = "1.5", features = [ "v4" ] }
